# typesense

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  For.cmake  GoogleTest.cmake  ISSUE_TEMPLATE.md  Procfile  README.md  SECURITY.md  SHOWCASE.md  TODO.md  WORKSPACE  asan.supp  build.sh  ci_build.sh  ci_build_v2.sh  component.yaml  dockcross  docker-build.sh  dockerfile  pub.asc  publish_release.sh  recipes.jsonl  requests.sh  tsan.supp
.choreo/: component.yaml
.circleci/: config.yml
.cursor/rules/: build.mdc  project.mdc  resources.mdc  style_cpp.mdc  style_ts.mdc  testing.mdc  testing_cpp.mdc  testing_ts.mdc
.github/: tests.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general-question.md
.github/workflows/: benchmark-testing.yml  integration-tests.yml  tests.yml
api_tests/: .env.example  .gitignore  README.md  package.json
api_tests/src/: cli.ts  constants.ts  index.ts  manager.ts  multi-node-only.ts  request.ts
api_tests/tests/: analytics.test.ts  collections.test.ts  conversation.test.ts  curation_sets.test.ts  documents.test.ts  embedding.test.ts  health.test.ts  migrate.test.ts  migrate_analytics.test.ts  override_sets.test.ts  synonym_sets.test.ts  tei-integration.test.ts
bazel/: archive.BUILD  clip_tokenizer.BUILD  crc32c.BUILD  curl.BUILD  elfutils.BUILD  foreign_cc.patch  foreign_cc_version_compiler.patch  hnsw.BUILD  iconv.BUILD  jemalloc.BUILD  kakasi.BUILD  libarchive.BUILD  libart.BUILD  libfor.BUILD  lrucache.BUILD  onnx.patch  onnx_ext.patch  onnxruntime.BUILD  onnxruntime_cuda_defs.bzl  onnxruntime_extensions.BUILD  openssl3.BUILD  rocksdb.BUILD  sentencepiece.BUILD  sentencepiece.patch  snappy.BUILD  snowball.BUILD  test_files.BUILD  whisper.BUILD  whisper.patch  zlib.BUILD
bazel/braft/: 0001.patch  0002_ipv6.patch
bazel/brpc/: brpc.patch  butil.patch  openssl.BUILD
bazel/config/: BUILD.bazel
bazel/h2o/: BUILD  h2o_1491a703195790278091fd7aee547fbba78e89af.patch
bazel/icu/: BUILD  icu.patch
bazel/klib/: BUILD
bazel/leveldb/: BUILD.bazel  leveldb.BUILD  port.h  port_config.h
bazel/picotls_openssl/: 0001.patch  BUILD
bazel/quicly/: 0001.patch  BUILD
bazel/s2geometry/: 0001.patch  BUILD
benchmark/: .gitignore  .nvmrc  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  grafana-dashboard.yaml  grafana-datasource.yaml  influxdb.generated.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
benchmark/src/: global.ts  index.ts
benchmark/test/: conversation-rotation.test.ts  env.test.ts  (+9 more)
cmake/: Easyloggingpp.cmake  For.cmake  GoogleTest.cmake  H2O.cmake  Iconv.cmake  Jemalloc.cmake  MariaDBConnector.cmake  Miniutf.cmake  RocksDB.cmake  TestResources.cmake  braft.cmake  brpc.cmake  g3log.cmake  h3.cmake  hnsw.cmake  kakasi.cmake  lrucache.cmake  onnx.patch  onnx_ext.patch  onnxruntime.cmake  onnxruntime_ext.cmake  patch.sh  s2.cmake
cmake/patches/miniutf/: CMakeLists.txt
debian-pkg/: generate_deb.sh  generate_deb_rpm.sh  gpu_generate_deb_rpm.sh
docker/: bazel.Dockerfile  bazel_dev.Dockerfile  build.Dockerfile  clion-remote-cpp-env-arm.Dockerfile  debugger.Dockerfile  deployment.Dockerfile  development-arm.Dockerfile  development-macos-entrypoint.sh  development-macos.Dockerfile  development.Dockerfile  packager.Dockerfile  ubuntu-10-04-gcc.Dockerfile  ubuntu-12-04-gcc.Dockerfile
include/: INIReader.h  IdGenerator.h  adi_tree.h  analytics_manager.h  api.h  app_metrics.h  aq_model.h  aq_model_manager.h  archive_utils.h  array.h  array_base.h  array_utils.h  art.h  async_doc_request.h  async_write_handler.h  auth_manager.h  backward.hpp  batched_indexer.h  cached_resource_stat.h  cmdline.h  collection.h  collection_manager.h  collection_metadata.h  collection_state.h  config.h  console_logging_sink.h  conversation_manager.h  conversation_model.h  conversation_model_manager.h  core_api.h  core_api_utils.h  count_min_sketch.h  curation.h  curation_index.h  curation_index_manager.h  cvt.h  diversity.h  doc_analytics.h  dr_wav.h  embedder_manager.h  (+104 more)
src/: adi_tree.cpp  analytics_manager.cpp  api.cpp  app_metrics.cpp  aq_model.cpp  aq_model_manager.cpp  archive_utils.cpp  array.cpp  array_base.cpp  array_utils.cpp  art.c  art.cpp  async_doc_request.cpp  async_write_handler.cpp  auth_manager.cpp  batched_indexer.cpp  cached_resource_stat.cpp  collection.cpp  collection.h  collection_manager.cpp  config.cpp  conversation_manager.cpp  conversation_model.cpp  conversation_model_manager.cpp  core_api.cpp  core_api_utils.cpp  curation.cpp  curation_index.cpp  curation_index_manager.cpp  cvt.cpp  diversity.cpp  doc_analytics.cpp  embedder_manager.cpp  event_manager.cpp  facet_index.cpp  field.cpp  file_utils.cpp  filter.cpp  filter_result_iterator.cpp  forarray.cpp  (+77 more)
test/: adi_tree_test.cpp  analytics_manager_test.cpp  app_metrics_test.cpp  archive_utils_test.cpp  array_test.cpp  array_text_documents.jsonl  array_utils_test.cpp  art_test.cpp  auth_manager_test.cpp  bad_config.ini  batched_indexer_test.cpp  bool_documents.jsonl  collection_all_fields_test.cpp  collection_curation_sets_test.cpp  collection_curation_test.cpp  collection_faceting_test.cpp  collection_filtering_test.cpp  collection_grouping_test.cpp  collection_infix_search_test.cpp  collection_join_test.cpp  collection_locale_test.cpp  collection_manager_test.cpp  collection_multi_search_agg.cpp  collection_multi_search_agg_test.cpp  collection_nested_fields_test.cpp  collection_operations_test.cpp  collection_optimized_faceting_test.cpp  collection_override_sets_test.cpp  collection_override_test.cpp  collection_schema_change_test.cpp  collection_sorting_test.cpp  collection_specific_more_test.cpp  collection_specific_test.cpp  collection_synonyms_test.cpp  collection_test.cpp  collection_vector_search_test.cpp  config_test.cpp  conversation_test.cpp  core_api_utils_test.cpp  curation_index_manager_test.cpp  (+54 more)
tests/: .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+75 files in other folders)
